2002-04-26  Jody Goldberg <jody@gnome.org>

	* service-edit-dialog.c (populate_app_list) : always populate the
	  details fields so a user can see what they selected.
	(program_changed_cb) : ditto.

	* service-info.c (fill_service_apps) : fix to not use freed memory.

2002-04-23  Jody Goldberg <jody@gnome.org>

	* model-entry.c (model_entry_save) : wrap in vfs freeze/unfreeze.
	(model_entry_append_to_dirty_list) : delete.
	(model_entry_remove_from_dirty_list) : delete.
	(model_entry_commit_dirty_list) : delete.
	(model_entry_append_to_delete_list) : delete.
	(model_entry_commit_delete_list) : delete.

	* mime-category-edit-dialog.c (store_data) : make this instant apply.
	* mime-edit-dialog.c (store_data) : ditto.
	* service-edit-dialog.c (store_data) : ditto.

	* file-types-capplet.c (cb_file_type_dialog_response) : add help and
	  change the buttons to help & close to be HIG compliant.
	(remove_cb) : make removal apply instantly.
	* file-types-properties.glade : Make the buttons Help & Close

2002-04-22  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (validate_data) : tidy up.
	(choose_cat_cb) : reorder buttons to be hig compliant.
	(mime_edit_dialog_init) : ditto.
	* service-edit-dialog.c (service_edit_dialog_init) : ditto.
	* mime-category-edit-dialog.c (mime_category_edit_dialog_init) : ditto.

2002-04-22  Jody Goldberg <jody@gnome.org>

	* service-edit-dialog.c (service_edit_dialog_set_prop) : set dialog
	  title correctly when adding a service.
	* mime-edit-dialog.c (mime_edit_dialog_set_prop) : ditto.

2002-04-21  Jody Goldberg <jody@gnome.org>

	* service-info.c (fill_service_apps) : Use the new hook in
	  gnome_vfs_application_registry_get_applications to actually retrieve
	  all the applications rather than just pretending.

2002-04-21  Jody Goldberg <jody@gnome.org>

	* service-edit-dialog.c (service_edit_dialog_init) : fully disable the
	  already disable 'check content' field.  What the heck is this supposed
	  to do ?
	(fill_dialog) : ditto.